Commit 10: Create an API to update the user.
